changed tack for identifying explicit modules

--- a/module_frontier.ipynb
+++ b/module_frontier.ipynb
@@ -799,16 +799,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ClosureVars(nonlocals={}, globals={}, builtins={}, unbound={'loads', 'json'})"
+       "ClosureVars(nonlocals={}, globals={'json': <module 'json' from '/Users/willb/anaconda/lib/python3.6/json/__init__.py'>}, builtins={}, unbound={'loads'})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
    "source": [
     "# Solving problems\n",
     "\n",
-    "To address the cases that the closure-inspecting approach misses, we can inspect the bytecode of each function. (We could also inspect abstract syntax trees, using the [`ast`](https://docs.python.org/3.6/library/ast.html) module, but in general it's easier to do this sort of work with a lower-level, more regular representation.  ASTs have more special cases.)\n",
+    "To address the cases that the closure-inspecting approach misses, we can inspect the bytecode of each function. (We could also inspect abstract syntax trees, using the [`ast`](https://docs.python.org/3.6/library/ast.html) module, but in general it's easier to do this sort of work with a lower-level, more regular representation.  ASTs have more cases to treat than bytecode.)\n",
     "\n",
     "Python bytecode is stack-based, meaning that each instruction may take one or more arguments from the stack (in addition to explicit arguments encoded in the instruction).  For a more involved analysis, we'd probably want to convert Python bytecode to a representation with explicit operands (like three-address code; see [section 2 of Vallée-Rai et al.](https://pdfs.semanticscholar.org/22df/3c0d055b7f65871068dfcd83d10f0a4fe2e4.pdf) for a reasonable approach), but let's see how far we can get by just operating on bytecode.\n",
     "\n",
@@ -923,10 +923,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 181,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def interesting(inst):\n",
@@ -935,11 +933,10 @@
     "    from functools import reduce\n",
     "    \n",
     "    if inst.opname == \"IMPORT_NAME\":\n",
-    "        # XXX\n",
     "        path = inst.argval.split(\".\")\n",
-    "        path[0] = import_module(path[0])\n",
-    "        \n",
-    "        return (\"module\", reduce(lambda x, a: getattr(x, a), path))\n",
+    "        path[0] = [import_module(path[0])]\n",
+    "        result = reduce(lambda x, a: x + [getattr(x[-1], a)], path)\n",
+    "        return (\"modules\", result)\n",
     "    if inst.opname == \"LOAD_GLOBAL\":\n",
     "        if inst.argval in globals() and type(globals()[inst.argval]) in [CodeType, FunctionType]:\n",
     "            return (\"code\", globals()[inst.argval])\n",
@@ -970,8 +967,9 @@
     "            mods.add(v.__module__)\n",
     "    for block in codeworklist:\n",
     "        for (k, v) in [interesting(inst) for inst in Bytecode(block) if interesting(inst)]:\n",
-    "            if k == \"module\":\n",
-    "                mods.add(v.__name__)\n",
+    "            if k == \"modules\":\n",
+    "                newmods = [mod.__name__ for mod in v if hasattr(mod, \"__name__\")]\n",
+    "                mods.update(set(newmods))\n",
     "            elif k == \"code\" and id(v) not in seen:\n",
     "                seen.add(id(v))\n",
     "                if hasattr(v, \"__module__\"):\n",
@@ -980,13 +978,15 @@
     "                worklist.append(v)\n",
     "            elif(inspect.iscode(v)):\n",
     "                codeworklist.append(v)\n",
-    "    \n",
-    "  return list(mods)"
+    "   \n",
+    "  result = list(mods)\n",
+    "  result.sort()\n",
+    "  return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
        "['numpy', 'sklearn.cluster.k_means_']"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,26 +1006,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['builtins',\n",
+       " 'numpy',\n",
        " 'numpy.core._methods',\n",
-       " 'numpy.core.umath',\n",
+       " 'numpy.core.fromnumeric',\n",
        " 'numpy.core.multiarray',\n",
-       " 'numpy.linalg.linalg',\n",
+       " 'numpy.core.numeric',\n",
        " 'numpy.core.numerictypes',\n",
+       " 'numpy.core.umath',\n",
        " 'numpy.lib.type_check',\n",
        " 'numpy.linalg._umath_linalg',\n",
-       " 'numpy',\n",
-       " 'numpy.core.numeric',\n",
-       " 'numpy.core.fromnumeric']"
+       " 'numpy.linalg.linalg']"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,27 +1036,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['builtins',\n",
-       " 'sys',\n",
+       " 'numpy',\n",
        " 'numpy.core._methods',\n",
-       " 'numpy.core.umath',\n",
+       " 'numpy.core.fromnumeric',\n",
        " 'numpy.core.multiarray',\n",
-       " 'numpy.linalg.linalg',\n",
+       " 'numpy.core.numeric',\n",
        " 'numpy.core.numerictypes',\n",
+       " 'numpy.core.umath',\n",
        " 'numpy.lib.type_check',\n",
        " 'numpy.linalg._umath_linalg',\n",
-       " 'numpy',\n",
-       " 'numpy.core.numeric',\n",
-       " 'numpy.core.fromnumeric']"
+       " 'numpy.linalg.linalg']"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,26 +1066,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['builtins',\n",
+       " 'numpy',\n",
        " 'numpy.core._methods',\n",
-       " 'numpy.core.umath',\n",
+       " 'numpy.core.fromnumeric',\n",
        " 'numpy.core.multiarray',\n",
-       " 'numpy.linalg.linalg',\n",
+       " 'numpy.core.numeric',\n",
        " 'numpy.core.numerictypes',\n",
+       " 'numpy.core.umath',\n",
        " 'numpy.lib.type_check',\n",
        " 'numpy.linalg._umath_linalg',\n",
-       " 'numpy',\n",
-       " 'numpy.core.numeric',\n",
-       " 'numpy.core.fromnumeric']"
+       " 'numpy.linalg.linalg']"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,20 +1096,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'sys.float_info' object has no attribute '__name__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-133-f6c787a6ec3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmf_revised\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkm_predict_five\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-128-731dddd2cd56>\u001b[0m in \u001b[0;36mmf_revised\u001b[0;34m(f)\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0minteresting\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minst\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mBytecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0minteresting\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"module\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m                 \u001b[0mmods\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"code\"\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mseen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                 \u001b[0mseen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'sys.float_info' object has no attribute '__name__'"
-     ]
+     "data": {
+      "text/plain": [
+       "['builtins',\n",
+       " 'numpy',\n",
+       " 'numpy.core._methods',\n",
+       " 'numpy.core.fromnumeric',\n",
+       " 'numpy.core.multiarray',\n",
+       " 'numpy.core.numeric',\n",
+       " 'numpy.core.numerictypes',\n",
+       " 'numpy.core.umath',\n",
+       " 'numpy.lib.type_check',\n",
+       " 'numpy.linalg',\n",
+       " 'numpy.linalg._umath_linalg',\n",
+       " 'numpy.linalg.linalg',\n",
+       " 'sys']"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
